fix text in timeline cut off on the right

--- a/style.css
+++ b/style.css
@@ -767,6 +767,10 @@ section cv
     }
 }
 
+.timepoint * {
+    margin-right: 10px;
+}
+
 .timepoint-entry p {
     margin-top: 8px;
 }
